--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,5 @@
     <color name="pink">#FD9AFF</color>
     <color name="WHY_GOD_WHY">#FF2FA2</color>
     <color name="JOSH_IS_BAD_AT_CANDY_CRUSH">#BF2A2A</color>
+    <color name="JOSH_BACK_TO_WORK">#f2a</color>
 </resources>
