--- a/app/src/main/res/layout/activity_grid_compleation.xml
+++ b/app/src/main/res/layout/activity_grid_compleation.xml
@@ -8,14 +8,16 @@
 
     <TextView
         android:id="@+id/random_code"
-        android:layout_width="237dp"
-        android:layout_height="46dp"
+        android:layout_width="223dp"
+        android:layout_height="42dp"
         android:layout_marginTop="112dp"
         android:text="TextView"
+        android:textAlignment="center"
+        android:textAllCaps="true"
+        android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:textAllCaps="true"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/invite_friends"
