--- a/app/src/main/res/layout/activity_join_grids.xml
+++ b/app/src/main/res/layout/activity_join_grids.xml
@@ -13,7 +13,9 @@
         android:layout_marginTop="120dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Name"
+        android:minHeight="48dp"
+        android:text="code"
+        android:textAllCaps="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
