--- a/app/src/main/res/layout/activity_get_location.xml
+++ b/app/src/main/res/layout/activity_get_location.xml
@@ -1,9 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.fragment.app.FragmentContainerView xmlns:android="http://schemas.android.com/apk/res/android"
+<fragment xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:map="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/map"
     android:name="com.google.android.gms.maps.SupportMapFragment"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".get_location" />
+    android:layout_height="550dp"
+    android:visibility="visible"
+    tools:context=".get_location">
+
+    <Button
+        android:id="@+id/map_select"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|right"
+        android:layout_marginTop="20dp"
+        android:padding="10dp"
+        android:paddingRight="10dp"
+        android:text="confirm location" />
+</fragment>
