--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -30,8 +30,8 @@
 
     <Button
         android:id="@+id/create_grids"
-        android:layout_width="149dp"
-        android:layout_height="190dp"
+        android:layout_width="wrap_content"
+        android:layout_height="183dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="209dp"
@@ -44,20 +44,22 @@
         android:layout_height="367dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="38dp"
-        android:layout_marginTop="335dp"
-        android:text="recent grids/testpage" />
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="46dp"
+        android:layout_marginTop="331dp"
+        android:layout_marginBottom="4dp"
+        android:text="recent grids" />
 
     <Button
         android:id="@+id/join_grids"
-        android:layout_width="149dp"
-        android:layout_height="190dp"
+        android:layout_width="wrap_content"
+        android:layout_height="166dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="208dp"
-        android:layout_marginEnd="54dp"
-        android:layout_marginBottom="228dp"
+        android:layout_marginStart="210dp"
+        android:layout_marginEnd="52dp"
+        android:layout_marginBottom="208dp"
         android:text="join grids" />
 
     <Button
@@ -67,8 +69,8 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="210dp"
-        android:layout_marginEnd="53dp"
-        android:layout_marginBottom="27dp"
+        android:layout_marginStart="208dp"
+        android:layout_marginEnd="54dp"
+        android:layout_marginBottom="13dp"
         android:text="my account" />
 </RelativeLayout>
