--- a/app/src/main/res/layout/activity_join_grids.xml
+++ b/app/src/main/res/layout/activity_join_grids.xml
@@ -12,9 +12,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="120dp"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:inputType="number"
         android:minHeight="48dp"
         android:text="code"
+        android:maxLength="6"
         android:textAllCaps="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
