--- a/app/src/main/res/layout/activity_location_view.xml
+++ b/app/src/main/res/layout/activity_location_view.xml
@@ -6,15 +6,23 @@
     android:name="com.google.android.gms.maps.SupportMapFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".get_location">
-
+    tools:context=".Location_View">
     <Button
-        android:id="@+id/map_select"
+    android:id="@+id/location_answer"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_gravity="bottom|end"
+    android:layout_marginTop="20dp"
+    android:padding="10dp"
+    android:paddingRight="10dp"
+    android:text="set you location"/>
+    <Button
+        android:id="@+id/location_answer_refresh"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|right"
+        android:layout_gravity="top|left"
         android:layout_marginTop="20dp"
         android:padding="10dp"
         android:paddingRight="10dp"
-        android:text="confirm location" />
+        android:text="refresh location"/>
 </fragment>
